# fireboy-and-watergirl-ocaml

./: .gitignore  AUTHORS.md  CLAUDE.md  LICENSE  README.md  bisect120728873.coverage  bisect368986963.coverage  bisect529314607.coverage  dune-project  gallery.yaml  teamproject.opam
.claude/: settings.json
.github/workflows/: ci.yml
data/: level1.txt
levels/: level1.json  level2.json
lib/: dune  game.ml  game.mli  input.ml  input.mli  level.ml  level.mli  level_loader.ml  level_loader.mli  physics.ml  physics.mli  player.ml  player.mli  render.ml  render.mli  render_queue.mli  sprite.ml  sprite.mli
test/: dune  test_teamproject.ml
tools/: level_editor.py  test_level_editor.py
